--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,3 +5,6 @@
 @import "../../node_modules/foundation-sites/scss/foundation";
 @include foundation-everything;
 
+// Components
+@import 'components/_todo';
+
