--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,5 +6,7 @@
 @include foundation-everything;
 
 // Components
-@import 'components/_todo';
+@import 'components/_todo-item';
+@import 'components/_page-title';
+@import 'components/_container';
 
